<?php

namespace App\Http\Resources\Definition\Basic;
/**
 * Interface ResultDefinitionInterface
 * 必須実装メソッドは今のところ未検討
 * 現状あまり意味がないが将来的に拡張性を持たせやすいように一応残す
 * @package App\Http\Result\Definition
 */
interface ResultDefinitionInterface{}
