<?php
namespace packages\domain\basic\type;

interface StringType
{
}
